# Proyecto-1---C23302

./: README.md  pyproject.toml
doc/: index.md  tercera_entrega_resultados.md  tercera_entrega_resultados_completo.md
resultados/: bench_20251103_120635.json  bench_20251103_120635.md
resultados/bench_20251103_120635_plots/: graficos.md
scripts/: analisis_tercera_entrega.py  armar_reporte_tercera_entrega.py  graficas_tercera_entrega.py  pruebas_primera_entrega.py  pruebas_segunda_entrega.py
src/: __init__.py  abbpunteros.py  abbvectorheap.py  diccionario.py  listaordenadadinamica.py  listaordenadaestatica.py  tablahashabierta.py  triearreglos.py  triepunteros.py
