[project]
name = "tarea1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Braulio J. Solano-Rojas", email = "braulio@solsoft.biz" }
]
requires-python = ">=3.11"
dependencies = [
    "rich>=14.1.0",
]

# No se define script de consola porque la app se ejecuta con `python -m src`.

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"
